--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,13 @@
 <html>
 
 <head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css"/>
+  <title>Recipes</title>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            
 </head>
 
 <body>
@@ -11,8 +16,7 @@
     </div>
   </nav>
   <div class="container">
-    <h1>Restaurant</h1>
-    <p>Welcome to Restaurant</p>
+    <h1>Recipe site</h1>
     <h3>Todays recipes</h3>
     <ul id="recipeList"></ul>
     <input type="text" id="name-text">
@@ -24,7 +28,7 @@
     <button id="add-instruction" type="button">Add instruction</button>
     <button id="submit" type="submit">Submit</button>
 
-    <div style="padding: 20px">
+    <div style="padding: 100px">
       <input type="file" id="image-input" accept="image/png, image/jpeg" multiple/>
       <button id="submit-images" type="submit">Submit</button>
     </div>
