--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,17 @@
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+  <link rel="stylesheet" href="stylesheets/style.css">
             
 </head>
 
 <body>
-  <nav>
+  <nav class="topnav">
     <div class="nav-wrapper">
+      <div class="search-container">
+        <input id="search" type="text" placeholder="Search.." name="search">
+      </div>
     </div>
   </nav>
   <div class="container">
