--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <nav class="topnav">
     <div class="nav-wrapper">
       <div class="search-container">
-        <input id="search" type="text" placeholder="Search.." name="search">
+        <input id="search" type="search" placeholder="Search.." name="search">
       </div>
     </div>
   </nav>
