--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   <link rel="stylesheet" href="stylesheets/style.css">
-            
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">            
 </head>
 
 <body>
@@ -27,6 +27,10 @@
       <ul id="recipeList"></ul>
     </div>
     <div class="col">
+      <h1>Diets</h1>
+      <div class="dietsDiv">
+        <ul id="diets" name="diets"/>
+      </div>
       <input type="text" id="name-text">
       <h4>Ingredients</h4>
       <textarea id="ingredients-text"></textarea>
